2011-01-10  Alejandro G. Castro  <alex@igalia.com>

        Reviewed by Martin Robinson.

        [GTK] Remove webkit2 files that are still not added to the
        repository from the makefile
        https://bugs.webkit.org/show_bug.cgi?id=52145

        This change is required for the release, we can add the lines
        again to the makefiles with the patches adding the files.

        * GNUmakefile.am:

2011-01-10  Andreas Kling  <kling@webkit.org>

        Reviewed by Simon Hausmann.

        [Qt] [WK2] MiniBrowser does not load pages opened in new windows
        https://bugs.webkit.org/show_bug.cgi?id=52111

        * UIProcess/API/qt/qwkpage.cpp:
        (QWKPage::context): Implement this method.

2011-01-09  Dan Bernstein  <mitz@apple.com>

        Reviewed by Simon Fraser.

        <rdar://problem/8839498> Assertion failure in KURL::KURL when calling WKURLRequestCreateWithWKURL with a non-parsed URL
        https://bugs.webkit.org/show_bug.cgi?id=52132

        * Shared/API/c/WKURLRequest.cpp:
        (WKURLRequestCreateWithWKURL): Parse the URL.
        * Shared/WebString.h: Fixed a comment.
        * Shared/WebURL.h: Ditto.

2011-01-09  Amruth Raj  <amruthraj@motorola.com> and Ravi Phaneendra Kasibhatla  <ravi.kasibhatla@motorola.com>

        Reviewed by Martin Robinson.

        Changes to add Process Launcher and Thread Launcher implementation to the WebKit2 GTK port.
        The main() implementation for WebKitWebProcess binary to launch Web process from UI process.
        https://bugs.webkit.org/show_bug.cgi?id=48511

        * UIProcess/Launcher/gtk: Added.
        * UIProcess/Launcher/gtk/ProcessLauncherGtk.cpp: Added. GTK (UNIX_X11 specific) implementation
        (WebKit::ProcessLauncher::launchProcess):
        (WebKit::ProcessLauncher::terminateProcess):
        (WebKit::ProcessLauncher::platformInvalidate):
        * UIProcess/Launcher/gtk/ThreadLauncherGtk.cpp: Added. Stubbed implementation for GTK port. Yet to implement.