@@ -1,3 +1,9 @@
+2011-01-10  Martin Robinson  <mrobinson@igalia.com>
+
+        GTK+ build fix. Continue to fix 'make dist.'
+
+        * GNUmakefile.am: Remove more non-existent files from the WebKit2 build.
+
 2011-01-10  Alejandro G. Castro  <alex@igalia.com>
 
         Reviewed by Martin Robinson.
